--- a/priyaartstudio.com/art-courses/index.html
+++ b/priyaartstudio.com/art-courses/index.html
@@ -31,11 +31,11 @@
 
     <!-- This site is optimized with the Yoast SEO plugin v12.3 - https://yoast.com/wordpress/plugins/seo/ -->
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://priyaartstudio.com/index.html/art-courses/" />
+    <link rel="canonical" href="https://priyaartstudio.com/art-courses/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Art Courses - Priya Art Studio" />
-    <meta property="og:url" content="https://priyaartstudio.com/index.html/art-courses/" />
+    <meta property="og:url" content="https://priyaartstudio.com/art-courses/" />
     <meta property="og:site_name" content="Priya Art Studio" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Art Courses - Priya Art Studio" />
@@ -368,7 +368,7 @@
                 <!-- Cart -->
                 <div class="col-sm-1">
                     <div class="ws-header-cart">
-                        <a href="https://priyaartstudio.com/index.html/cart/">Cart(0)</a>
+                        <a href="https://priyaartstudio.com/cart/">Cart(0)</a>
                     </div>
                 </div>
 
@@ -890,6 +890,7 @@
 	<option value='https://priyaartstudio.com/index.html/2010/03/'> March 2010 </option>
 
 		</select>
+
 
                         <script type="text/javascript">
                             /* <![CDATA[ */
