--- a/priyaartstudio.com/contact/index.html
+++ b/priyaartstudio.com/contact/index.html
@@ -31,11 +31,11 @@
 
     <!-- This site is optimized with the Yoast SEO plugin v12.3 - https://yoast.com/wordpress/plugins/seo/ -->
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://priyaartstudio.com/index.html/contact/" />
+    <link rel="canonical" href="https://priyaartstudio.com/contact/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Contact Us - Priya Art Studio" />
-    <meta property="og:url" content="https://priyaartstudio.com/index.html/contact/" />
+    <meta property="og:url" content="https://priyaartstudio.com/contact/" />
     <meta property="og:site_name" content="Priya Art Studio" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Contact Us - Priya Art Studio" />
@@ -54,8 +54,8 @@
                 }
             }, {
                 "@type": "WebPage",
-                "@id": "https://priyaartstudio.com/index.html/contact/#webpage",
-                "url": "https://priyaartstudio.com/index.html/contact/",
+                "@id": "https://priyaartstudio.com/contact/#webpage",
+                "url": "https://priyaartstudio.com/contact/",
                 "inLanguage": "en-US",
                 "name": "Contact Us - Priya Art Studio",
                 "isPartOf": {
@@ -400,7 +400,7 @@
                 <!-- Cart -->
                 <div class="col-sm-1">
                     <div class="ws-header-cart">
-                        <a href="https://priyaartstudio.com/index.html/cart/">Cart(0)</a>
+                        <a href="https://priyaartstudio.com/cart/">Cart(0)</a>
                     </div>
                 </div>
 
