--- a/priyaartstudio.com/gallery/gouache-sketches/index.html
+++ b/priyaartstudio.com/gallery/gouache-sketches/index.html
@@ -35,7 +35,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Gouache Sketches - Priya Art Studio" />
-    <meta property="og:url" content="https://priyaartstudio.com/index.html/gouache-sketches/" />
+    <meta property="og:url" content="https://priyaartstudio.com/gallery/gouache-sketches/" />
     <meta property="og:site_name" content="Priya Art Studio" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Gouache Sketches - Priya Art Studio" />
@@ -54,8 +54,8 @@
                 }
             }, {
                 "@type": "WebPage",
-                "@id": "https://priyaartstudio.com/index.html/gouache-sketches/#webpage",
-                "url": "https://priyaartstudio.com/index.html/gouache-sketches/",
+                "@id": "https://priyaartstudio.com/gallery/gouache-sketches/#webpage",
+                "url": "https://priyaartstudio.com/gallery/gouache-sketches/",
                 "inLanguage": "en-US",
                 "name": "Gouache Sketches - Priya Art Studio",
                 "isPartOf": {
@@ -368,7 +368,7 @@
                 <!-- Cart -->
                 <div class="col-sm-1">
                     <div class="ws-header-cart">
-                        <a href="https://priyaartstudio.com/index.html/cart/">Cart(0)</a>
+                        <a href="https://priyaartstudio.com/cart/">Cart(0)</a>
                     </div>
                 </div>
 
@@ -769,8 +769,8 @@
                         <h2 class="widget-title">Meta</h2>
                         <ul>
                             <li><a rel="nofollow" href="https://priyaartstudio.com/wp-login.php">Log in</a></li>
-                            <li><a href="https://priyaartstudio.com/index.html/feed/">Entries feed</a></li>
-                            <li><a href="https://priyaartstudio.com/index.html/comments/feed/">Comments feed</a></li>
+                            <li><a href="https://priyaartstudio.com/feed/">Entries feed</a></li>
+                            <li><a href="https://priyaartstudio.com/comments/feed/">Comments feed</a></li>
                             <li><a href="https://wordpress.org/">WordPress.org</a></li>
                         </ul>
                     </div>
