--- a/priyaartstudio.com/journal/index.html
+++ b/priyaartstudio.com/journal/index.html
@@ -31,14 +31,14 @@
 
     <!-- This site is optimized with the Yoast SEO plugin v12.3 - https://yoast.com/wordpress/plugins/seo/ -->
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://priyaartstudio.com/index.html/journal/" />
-    <link rel="next" href="https://priyaartstudio.com/index.html/journal/page/2/" />
+    <link rel="canonical" href="https://priyaartstudio.com/journal/" />
+    <link rel="next" href="https://priyaartstudio.com/journal/page/2/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Blog - Priya Art Studio" />
     <meta property="og:description" content="MOE STAR video for Art Teachers n students is out! Patrick Ng , Parka Teoh Yi Chie and myself are featured and We hope to inspire teachers &amp; students with our little snippets of practical approach to Art, thanks to Urban Sketchers Singapore for the wonderful opportunity!! Thank you Lorraine from MOE STAR and Onedash22 &hellip;"
     />
-    <meta property="og:url" content="https://priyaartstudio.com/index.html/journal/" />
+    <meta property="og:url" content="https://priyaartstudio.com/journal/" />
     <meta property="og:site_name" content="Priya Art Studio" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="MOE STAR video for Art Teachers n students is out! Patrick Ng , Parka Teoh Yi Chie and myself are featured and We hope to inspire teachers &amp; students with our little snippets of practical approach to Art, thanks to Urban Sketchers Singapore for the wonderful opportunity!! Thank you Lorraine from MOE STAR and Onedash22 [&hellip;]"
@@ -59,8 +59,8 @@
                 }
             }, {
                 "@type": "CollectionPage",
-                "@id": "https://priyaartstudio.com/index.html/journal/#webpage",
-                "url": "https://priyaartstudio.com/index.html/journal/",
+                "@id": "https://priyaartstudio.com/journal/#webpage",
+                "url": "https://priyaartstudio.com/journal/",
                 "inLanguage": "en-US",
                 "name": "Blog - Priya Art Studio",
                 "isPartOf": {
@@ -367,7 +367,7 @@
                 <!-- Cart -->
                 <div class="col-sm-1">
                     <div class="ws-header-cart">
-                        <a href="https://priyaartstudio.com/index.html/cart/">Cart(0)</a>
+                        <a href="https://priyaartstudio.com/cart/">Cart(0)</a>
                     </div>
                 </div>
 
@@ -1004,8 +1004,8 @@
                         <h2 class="widget-title">Meta</h2>
                         <ul>
                             <li><a rel="nofollow" href="https://priyaartstudio.com/wp-login.php">Log in</a></li>
-                            <li><a href="https://priyaartstudio.com/index.html/feed/">Entries feed</a></li>
-                            <li><a href="https://priyaartstudio.com/index.html/comments/feed/">Comments feed</a></li>
+                            <li><a href="https://priyaartstudio.com/feed/">Entries feed</a></li>
+                            <li><a href="https://priyaartstudio.com/comments/feed/">Comments feed</a></li>
                             <li><a href="https://wordpress.org/">WordPress.org</a></li>
                         </ul>
                     </div>
