--- a/priyaartstudio.com/cart/index.html
+++ b/priyaartstudio.com/cart/index.html
@@ -31,11 +31,11 @@
 
     <!-- This site is optimized with the Yoast SEO plugin v12.3 - https://yoast.com/wordpress/plugins/seo/ -->
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://priyaartstudio.com/index.html/cart/" />
+    <link rel="canonical" href="https://priyaartstudio.com/cart/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Cart - Priya Art Studio" />
-    <meta property="og:url" content="https://priyaartstudio.com/index.html/cart/" />
+    <meta property="og:url" content="https://priyaartstudio.com/cart/" />
     <meta property="og:site_name" content="Priya Art Studio" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Cart - Priya Art Studio" />
@@ -54,8 +54,8 @@
                 }
             }, {
                 "@type": "WebPage",
-                "@id": "https://priyaartstudio.com/index.html/cart/#webpage",
-                "url": "https://priyaartstudio.com/index.html/cart/",
+                "@id": "https://priyaartstudio.com/cart/#webpage",
+                "url": "https://priyaartstudio.com/cart/",
                 "inLanguage": "en-US",
                 "name": "Cart - Priya Art Studio",
                 "isPartOf": {
@@ -369,7 +369,7 @@
                 <!-- Cart -->
                 <div class="col-sm-1">
                     <div class="ws-header-cart">
-                        <a href="https://priyaartstudio.com/index.html/cart/">Cart(0)</a>
+                        <a href="https://priyaartstudio.com/cart/">Cart(0)</a>
                     </div>
                 </div>
 
