--- a/priyaartstudio.com/gallery/Oil-Paintings/index.html
+++ b/priyaartstudio.com/gallery/Oil-Paintings/index.html
@@ -31,11 +31,11 @@
 
     <!-- This site is optimized with the Yoast SEO plugin v12.3 - https://yoast.com/wordpress/plugins/seo/ -->
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://priyaartstudio.com/index.html/oil-paintings/" />
+    <link rel="canonical" href="https://priyaartstudio.com/gallery/oil-paintings/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Oil paintings - Priya Art Studio" />
-    <meta property="og:url" content="https://priyaartstudio.com/index.html/oil-paintings/" />
+    <meta property="og:url" content="https://priyaartstudio.com/gallery/oil-paintings/" />
     <meta property="og:site_name" content="Priya Art Studio" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Oil paintings - Priya Art Studio" />
@@ -54,8 +54,8 @@
                 }
             }, {
                 "@type": "WebPage",
-                "@id": "https://priyaartstudio.com/index.html/oil-paintings/#webpage",
-                "url": "https://priyaartstudio.com/index.html/oil-paintings/",
+                "@id": "https://priyaartstudio.com/gallery/oil-paintings/#webpage",
+                "url": "https://priyaartstudio.com/gallery/oil-paintings/",
                 "inLanguage": "en-US",
                 "name": "Oil paintings - Priya Art Studio",
                 "isPartOf": {
@@ -368,7 +368,7 @@
                 <!-- Cart -->
                 <div class="col-sm-1">
                     <div class="ws-header-cart">
-                        <a href="https://priyaartstudio.com/index.html/cart/">Cart(0)</a>
+                        <a href="https://priyaartstudio.com/cart/">Cart(0)</a>
                     </div>
                 </div>
 
@@ -776,8 +776,8 @@
                         <h2 class="widget-title">Meta</h2>
                         <ul>
                             <li><a rel="nofollow" href="https://priyaartstudio.com/wp-login.php">Log in</a></li>
-                            <li><a href="https://priyaartstudio.com/index.html/feed/">Entries feed</a></li>
-                            <li><a href="https://priyaartstudio.com/index.html/comments/feed/">Comments feed</a></li>
+                            <li><a href="https://priyaartstudio.com/feed/">Entries feed</a></li>
+                            <li><a href="https://priyaartstudio.com/comments/feed/">Comments feed</a></li>
                             <li><a href="https://wordpress.org/">WordPress.org</a></li>
                         </ul>
                     </div>
